--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <div class="burger_menu_container">
             <nav class="burger_nav">
                 <ul>
-                    <li class="burger_item"><a href="" class = "burger_item_link">Курсы</a></li>
+                    <li class="burger_item"><a href="/login.html"  class = "burger_item_link">Вход</a></li>
                     <li class="burger_item"><a href=""  class = "burger_item_link">Для преподавателей</a></li>
+                    <li class="burger_item"><a href="#get_start" class = "burger_item_link">Курсы</a></li>
                 </ul>
             </nav>
         </div>
