--- a/first/index.html
+++ b/first/index.html
@@ -69,10 +69,10 @@
                         <span class = "text-item language">RU | ENG</span>
                     </div>
                     <div class = "image-container">
-                        <img src="/assets/img/Group 2.1.png"  class = "prewiew-img" alt="">
+                        <img src="assets/img/Group 2.1.png"  class = "prewiew-img" alt="">
                     </div>
                     <div class = "mini-image-container">
-                        <img src="/assets/img/mini-prevew.png"  class = "mini-prewiew" alt="">
+                        <img src="assets/img/mini-prevew.png"  class = "mini-prewiew" alt="">
                     </div>
                 </div>
                 
@@ -106,22 +106,22 @@
                     <div class="skills-section-image-container">
                         <div class="skills-section-image-item">
                             <div class="image-title">
-                                <img src="/assets/img/photoshop.png" width="100%" alt="">
+                                <img src="assets/img/photoshop.png" width="100%" alt="">
                             </div>
                         </div>
                         <div class="skills-section-image-item">
                             <div class="image-title">
-                                <img src="/assets/img/ai.png" width="100%" alt="">
+                                <img src="assets/img/ai.png" width="100%" alt="">
                             </div>
                         </div>
                         <div class="skills-section-image-item">
                             <div class="image-title">
-                                <img src="/assets/img/af.png" width="100%" alt="">
+                                <img src="assets/img/af.png" width="100%" alt="">
                             </div>
                         </div>
                         <div class="skills-section-image-item">
                             <div class="image-title">
-                                <img src="/assets/img/figma.png" width="100%" alt="">
+                                <img src="assets/img/figma.png" width="100%" alt="">
                             </div>
                         </div>
                     </div>
@@ -134,15 +134,15 @@
                 <div class="portfolio-section-container">
                     <span class="portfolio-section-title"> Portfolio </span>
                     <div class="portfolio-section-block-item">
-                        <img src="/assets/img/portfolio_1.png" alt=""  width="100%" class="image-item">
+                        <img src="assets/img/portfolio_1.png" alt=""  width="100%" class="image-item">
                         <span class="img-item-more"> Online fashion store - Homepage</span>
                     </div>
                     <div class="portfolio-section-block-item">
-                        <img src="/assets/img/portfolio_2.png" alt="" width="100%" class="image-item">
+                        <img src="assets/img/portfolio_2.png" alt="" width="100%" class="image-item">
                         <span class="img-item-more"> Reebok Store - Concept </span>
                     </div>
                     <div class="portfolio-section-block-item">
-                        <img src="/assets/img/portfolio_3.png" alt="" width="100%"   class="image-item">
+                        <img src="assets/img/portfolio_3.png" alt="" width="100%"   class="image-item">
                         <span class="img-item-more"> Braun Landing Page - Concept </span>
                     </div>
                 </div>
@@ -164,16 +164,16 @@
                 <button class="footer-send-button"> Send message</button>
                 <div class="footer-social-container">
                     <div class="footer-social-item">
-                        <img src="/assets/img/social_1.svg" alt="">
+                        <img src="assets/img/social_1.svg" alt="">
                     </div>
                     <div class="footer-social-item">
-                        <img src="/assets/img/social_2.svg" alt="">
+                        <img src="assets/img/social_2.svg" alt="">
                     </div>
                     <div class="footer-social-item">
-                        <img src="/assets/img/social_3.svg" alt="">
+                        <img src="assets/img/social_3.svg" alt="">
                     </div>
                     <div class="footer-social-item">
-                        <img src="/assets/img/social_4.svg" alt="">
+                        <img src="assets/img/social_4.svg" alt="">
                     </div>
                 </div>
                 <div class="footer-botton-text-item"> Like me on <br> LinkedIn, Instagram, Behance, Dribble</div>
@@ -183,6 +183,6 @@
     </div>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/assets/js/menu.js"></script>
+    <script src="assets/js/menu.js"></script>
 </body>
 </html>
