--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
 
     <div class="up_scroll" id = "up_scroll"></div>
 
-    <!------------------------------------->
-    <!--------HEADER_BURGER_MENU----------->
-    <!------------------------------------->
-
     <div class="header_burger_menu" id = "header_burger_menu">
         <span class = "burger_title">Logotype</span>
         <div class="burger_menu_container">
@@ -43,10 +39,6 @@
             </nav>
         </div>
     </div>
-
-    <!------------------------------------->
-    <!-------------HEADER------------------>
-    <!------------------------------------->
 
     <header class="header">
         <div class="span_container">
@@ -67,11 +59,6 @@
     </header>
 
     <div class="wrapper">
-
-    <!------------------------------------->
-    <!---------PREWIEW_SECTION------------->
-    <!------------------------------------->
-
         <section class="prewiew blue_back">
             <div class="container">
                 <div class="prewiew_content">
@@ -85,10 +72,6 @@
                 </div>
             </div>
         </section>
-
-    <!------------------------------------->
-    <!-----------SKILLS_SECTION------------>
-    <!------------------------------------->
 
         <section class="skills">
             <div class="container">
@@ -126,10 +109,6 @@
             </div>
         </section>
 
-    <!------------------------------------->
-    <!-----------US_LEARN_SECTION---------->
-    <!------------------------------------->
-
         <section class="us_learn blue_back">
             <div class="container">
                 <div class="us_learn_content">
@@ -144,35 +123,31 @@
             </div>
         </section>
 
-    <!------------------------------------->
-    <!--------------GET_START-------------->
-    <!------------------------------------->  
-
         <section class="get_start" id = "get_start">
             <div class="container">
                 <div class="get_start_title">Начните свое изучение</div>
                 <div class="get_start_block_container">
                     <div class="get_start_block n_1">
-                        <div class="block_title"> HTML модулирование</div>
+                        <div class="block_title"> HTML</div>
                         <button class="start">
                             Начать
                         </button>
                     </div>
                     <div class="get_start_block n_2">
-                        <div class="block_title"> CSS модулирование</div>
+                        <div class="block_title"> CSS </div>
                         <button class="start">
                             Начать
                         </button>
                     </div>
                     <div class="get_start_block n_2">
                         <div class="block_title"> Javascript
-                            модулирование</div>
+                            </div>
                         <button class="start">
                             Начать
                         </button>
                     </div>
                     <div class="get_start_block n_1">
-                        <div class="block_title">Заключительное модулирование</div>
+                        <div class="block_title">Практика</div>
                         <button class="start">
                             Начать
                         </button>
@@ -180,14 +155,7 @@
                 </div>
             </div>
         </section>
-
-
-
     </div>
-
-    <!------------------------------------->
-    <!---------------FOOTER---------------->
-    <!------------------------------------->
 
     <footer class="footer blue_back">
         <div class="container"> 
