--- a/login.html
+++ b/login.html
@@ -42,8 +42,8 @@
                         <div class="login_from_title"> 
                              Вход
                         </div>
-                        <input class="login_form_field_login" type="text" placeholder="Login">
-                        <input class="login_form_field_password" type="password" placeholder="Password">
+                        <input class="login_form_field_login" type="text" placeholder="Логин">
+                        <input class="login_form_field_password" type="password" placeholder="Пароль">
                         <a href = "/profile.html" class="login_form_button" > Войти</a>
                     <a href="/registr.html" class="login_from_link"> Зарегистрироваться</a>
                     </div>
