--- a/profile.html
+++ b/profile.html
@@ -79,10 +79,10 @@
                         </button>
                     </div>
                     <div class="profile_info">
-                        <span class="info"> Name: </span>
-                        <span class="info"> Surname: </span>
-                        <span class="info"> Login: </span>
-                        <span class="info"> Password: </span>
+                        <span class="info"> Имя: </span>
+                        <span class="info"> Фамилия: </span>
+                        <span class="info"> Логин: </span>
+                        <span class="info"> Пароль: </span>
                     </div>
                 </div>
             </div>
