--- a/registr.html
+++ b/registr.html
@@ -39,10 +39,10 @@
                         </a>
                     </div>
                     <div class="regist_from_title"> Регистрация</div>
-                    <input class="regist_form_field_name" type="text" placeholder="Name">
-                    <input class="regist_form_field_surname" type="text" placeholder="Surname">
-                    <input class="regist_form_field_login" type="text" placeholder="Login">
-                    <input class="regist_form_field_password" type="text" placeholder="Password">
+                    <input class="regist_form_field_name" type="text" placeholder="Имя">
+                    <input class="regist_form_field_surname" type="text" placeholder="Фамилия">
+                    <input class="regist_form_field_login" type="text" placeholder="Логин">
+                    <input class="regist_form_field_password" type="text" placeholder="Пароль">
                     <button class="regist_form_button"> Зарегистрироваться</button>
                 </div>
             </form>
