--- a/voleyboll/main.html
+++ b/voleyboll/main.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/slick-theme.css">
-    <link rel="stylesheet" href="/css/slick.css">
+    <link rel="stylesheet" href="/css/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="/css/style.css">
+   
+
+ 
     <link rel="shortcut icon" type="image/x-icon" href="/svg/logo.svg" />
 
     <title>Voleyboll</title>
@@ -102,98 +104,87 @@
         <div class="title">
             Предстоящие матчи
         </div>
-        <div class="multiple-items">
-            <div class="match__block">
-                <div class="match__info">
-                    <div class="first__team">
-                        <img src="/svg/logo.svg" alt="">
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class=" match__block swiper-slide">
+                    <div class="match__info">
+                        <div class="first__team">
+                            <img src="/svg/logo.svg" alt="">
+                        </div>
+                        <div class="first__team_mark">0</div>
+                        <span>:</span>
+                        <div class="second__team-mark">0</div>
+                        <div class="second__team">
+                            <img src="/svg/logo.svg" alt="">
+                        </div>
                     </div>
-                    <div class="first__team_mark">0</div>
-                    <span>:</span>
-                    <div class="second__team-mark">0</div>
-                    <div class="second__team">
-                        <img src="/svg/logo.svg" alt="">
+                    <hr>
+                    <div class="date">
+                        <span class="time"> 9:45</span>
+                        <span class="place">Здесь будет написан адрес игры место площадки. </span>
                     </div>
                 </div>
-                <hr>
-                <div class="date">
-                    <span class="time"> 9:45</span>
-                    <span class="place">Здесь будет написан адрес игры место площадки. </span>
+                <div class=" match__block swiper-slide">
+                    <div class="match__info">
+                        <div class="first__team">
+                            <img src="/svg/logo.svg" alt="">
+                        </div>
+                        <div class="first__team_mark">0</div>
+                        <span>:</span>
+                        <div class="second__team-mark">0</div>
+                        <div class="second__team">
+                            <img src="/svg/logo.svg" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="date">
+                        <span class="time"> 9:45</span>
+                        <span class="place">Здесь будет написан адрес игры место площадки. </span>
+                    </div>
+                </div>
+                <div class="match__block swiper-slide ">
+                    <div class="match__info">
+                        <div class="first__team">
+                            <img src="/svg/logo.svg" alt="">
+                        </div>
+                        <div class="first__team_mark">0</div>
+                        <span>:</span>
+                        <div class="second__team-mark">0</div>
+                        <div class="second__team">
+                            <img src="/svg/logo.svg" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="date">
+                        <span class="time"> 9:45</span>
+                        <span class="place">Здесь будет написан адрес игры место площадки. </span>
+                    </div>
+                </div>
+                <div class=" match__block swiper-slide">
+                    <div class="match__info">
+                        <div class="first__team">
+                            <img src="/svg/logo.svg" alt="">
+                        </div>
+                        <div class="first__team_mark">0</div>
+                        <span>:</span>
+                        <div class="second__team-mark">0</div>
+                        <div class="second__team">
+                            <img src="/svg/logo.svg" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="date">
+                        <span class="time"> 9:45</span>
+                        <span class="place">Здесь будет написан адрес игры место площадки. </span>
+                    </div>
                 </div>
             </div>
-            <div class="match__block">
-                <div class="match__info">
-                    <div class="first__team">
-                        <img src="/svg/logo.svg" alt="">
-                    </div>
-                    <div class="first__team_mark">0</div>
-                    <span>:</span>
-                    <div class="second__team-mark">0</div>
-                    <div class="second__team">
-                        <img src="/svg/logo.svg" alt="">
-                    </div>
-                </div>
-                <hr>
-                <div class="date">
-                    <span class="time"> 9:45</span>
-                    <span class="place">Здесь будет написан адрес игры место площадки. </span>
-                </div>
-            </div>
-            <div class="match__block">
-                <div class="match__info">
-                    <div class="first__team">
-                        <img src="/svg/logo.svg" alt="">
-                    </div>
-                    <div class="first__team_mark">0</div>
-                    <span>:</span>
-                    <div class="second__team-mark">0</div>
-                    <div class="second__team">
-                        <img src="/svg/logo.svg" alt="">
-                    </div>
-                </div>
-                <hr>
-                <div class="date">
-                    <span class="time"> 9:45</span>
-                    <span class="place">Здесь будет написан адрес игры место площадки. </span>
-                </div>
-            </div>
-            <div class="match__block">
-                <div class="match__info">
-                    <div class="first__team">
-                        <img src="/svg/logo.svg" alt="">
-                    </div>
-                    <div class="first__team_mark">0</div>
-                    <span>:</span>
-                    <div class="second__team-mark">0</div>
-                    <div class="second__team">
-                        <img src="/svg/logo.svg" alt="">
-                    </div>
-                </div>
-                <hr>
-                <div class="date">
-                    <span class="time"> 9:45</span>
-                    <span class="place">Здесь будет написан адрес игры место площадки. </span>
-                </div>
-            </div>
-            <div class="match__block">
-                <div class="match__info">
-                    <div class="first__team">
-                        <img src="/svg/logo.svg" alt="">
-                    </div>
-                    <div class="first__team_mark">0</div>
-                    <span>:</span>
-                    <div class="second__team-mark">0</div>
-                    <div class="second__team">
-                        <img src="/svg/logo.svg" alt="">
-                    </div>
-                </div>
-                <hr>
-                <div class="date">
-                    <span class="time"> 9:45</span>
-                    <span class="place">Здесь будет написан адрес игры место площадки. </span>
-                </div>
-            </div>
+
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
+            
+ 
     </section>
 
     <section class="statistic">
@@ -288,12 +279,12 @@
         <div class="title">
             Фотографии
         </div>
-        <div class="photos__container">
-            <div class="multiple-items">
-                <div class="photo__block">
-                    <img class = "photo__img" src="/img/photo.png" alt="">
+        <div class="swiper1">
+            <div class="swiper-wrapper">
+                <div class="photo__block swiper-slide">
+                    <img class = " photo__img" src="/img/photo.png" alt="">
                 </div>
-                <div class="photo__block photo__block-mini">
+                <div class="photo__block photo__block-mini swiper-slide">
                     <div class="photo__block-first">
                         <img class = "photo__img" src="/img/photo.png" alt="">
                     </div>
@@ -301,10 +292,10 @@
                         <img class = "photo__img" src="/img/photo.png" alt="">
                     </div>
                 </div>
-                <div class="photo__block">
+                <div class=" photo__block swiper-slide">
                     <img class = "photo__img" src="/img/photo.png" alt="">
                 </div>
-                <div class="photo__block photo__block-mini">
+                <div class=" photo__block photo__block-mini swiper-slide">
                     <div class="photo__block-first">
                         <img class = "photo__img" src="/img/photo.png" alt="">
                     </div>
@@ -313,7 +304,11 @@
                     </div>
                 </div>
             </div>
+            <div class="swiper-pagination1"></div>
+            <div class="swiper-button-prev1"></div>
+            <div class="swiper-button-next1"></div>
         </div>
+
     </section>
 
     <section class="about__us">
@@ -350,8 +345,7 @@
         </div>
     </footer>
 
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="/js/slick.min.js"></script>
+    <script src="/js/swiper-bundle.min.js"></script>
     <script src="/js/index.js"></script>
 </body>
 </html>
