--- a/voleyboll/index.html
+++ b/voleyboll/index.html
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-
+            <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
