--- a/voleyboll/index.html
+++ b/voleyboll/index.html
@@ -17,6 +17,34 @@
     <title>Voleyboll</title>
 </head>
 <body>
+    <div class="mobile__header-menu">
+        <nav class = "mobile_menu">
+            <ul class = "mobile_menu__ul">
+                <li class="mobile_menu__li"> <a href = "/">Главная</a> </li>
+                <li class="mobile_menu__li"> <a href = "/">Игры</a></li>
+                <li class="mobile_menu__li"> <a href = "/team.html">Команда</a> </li>
+                <li class="mobile_menu__li"> <a href = "/statistics.html">Статистика</a></li>
+                <li class="mobile_menu__li"> <a href = "/">Документы</a></li>
+            </ul>
+        </nav>
+    </div>
+    <header class = "mobile__header">
+        <div class="container">
+            <div class="header__logo">
+                <div class="logo">
+                    <a href = "/" ><img src="/svg/logo.svg" alt=""></a>
+                </div>
+                <div class="name">
+                   <a href = "/">Школьная <br> волейбольная лига</a> 
+                </div>
+            </div>
+            <div class="burger__container">
+                <div class="mobile__header-burger">
+                    <span></span>
+                </div>
+            </div>
+        </div>
+    </header>
     <div class="container">
         <header class = "header">
                 <div class="header__logo">
@@ -67,7 +95,6 @@
                         </div>
                         <div class="news_all_info">
                             <span class="date">16.04.2021</span>
-                            <br>
                             <span class="info">Волейбольная лига «Трудовые резервы» возобновляет проведение чемпионата с 8 ноября</span>
                         </div>
                     </div>
@@ -77,7 +104,6 @@
                         </div>
                         <div class="news_all_info">
                             <span class="date">16.04.2021</span>
-                            <br>
                             <span class="info">Волейбольная лига «Трудовые резервы» возобновляет проведение чемпионата с 8 ноября</span>
                         </div>
                     </div>
@@ -87,7 +113,6 @@
                         </div>
                         <div class="news_all_info">
                             <span class="date">16.04.2021</span>
-                            <br>
                             <span class="info">Волейбольная лига «Трудовые резервы» возобновляет проведение чемпионата с 8 ноября</span>
                         </div>
                     </div>
@@ -188,84 +213,96 @@
             Статистика
         </div>
         <div class="statistics__container">
-            <div class="table">
-                <table>
-                    <tr>
-                        <th>Команда</th>
-                        <th>Игры</th> 
-                        <th>Очки</th>
-                    </tr>
-                    <tr>
-                        <td>Волейбол</td>
-                        <td>3</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>Волейбол</td>
-                        <td>3</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>Волейбол</td>
-                        <td>3</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>Волейбол</td>
-                        <td>3</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>Волейбол</td>
-                        <td>3</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>Волейбол</td>
-                        <td>3</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>Волейбол</td>
-                        <td>3</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>Волейбол</td>
-                        <td>3</td>
-                        <td>12</td>
-                    </tr>
-
-                </table>
+            <div class="swiper2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="table">
+                             <table>
+                                <tr>
+                                    <th>Команда</th>
+                                    <th>Игры</th> 
+                                    <th>Очки</th>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                       
+                            </table>
+                        </div>
+                    </div>
+                </div>  
             </div>
-                <div class="table">
-                    <table>
-                        <tr>
-                            <th>Команда</th>
-                            <th>Игры</th> 
-                            <th>Очки</th>
-                        </tr>
-                        <tr>
-                            <td>Волейбол</td>
-                            <td>3</td>
-                            <td>12</td>
-                        </tr>
-                        <tr>
-                            <td>Волейбол</td>
-                            <td>3</td>
-                            <td>12</td>
-                        </tr>
-                        <tr>
-                            <td>Волейбол</td>
-                            <td>3</td>
-                            <td>12</td>
-                        </tr>
-                        <tr>
-                            <td>Волейбол</td>
-                            <td>3</td>
-                            <td>12</td>
-                        </tr>
-                </table>
+            <div class="swiper2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="table">
+                            <table>
+                                <tr>
+                                    <th>Команда</th>
+                                    <th>Игры</th> 
+                                    <th>Очки</th>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>Волейбол</td>
+                                    <td>3</td>
+                                    <td>12</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         
