--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -86,7 +86,7 @@
             <div class="all__news">
                 <div class="all__news_titles">
                     <span>Новости</span>
-                    <span><a href = "/">Больше</a></span>
+                    <span><a href = "/news.html">Больше</a></span>
                 </div>
                 <div class="news__all">
                     <div class="news__all_container">
