--- a/voleyboll/statistics.html
+++ b/voleyboll/statistics.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
  
     <link rel="shortcut icon" type="image/x-icon" href="/svg/logo.svg" />
 
-    <title>Voleyboll</title>
+    <title>Статистика</title>
 </head>
 <body>
     <div class="mobile__header-menu">
