--- a/news.html
+++ b/news.html
@@ -22,10 +22,10 @@
         <nav class = "mobile_menu">
             <ul class = "mobile_menu__ul">
                 <li class="mobile_menu__li"> <a href = "/">Главная</a> </li>
-                <li class="mobile_menu__li"> <a href = "/">Игры</a></li>
+                <li class="mobile_menu__li"> <a href = "/all_games.html">Игры</a></li>
                 <li class="mobile_menu__li"> <a href = "/team.html">Команда</a> </li>
                 <li class="mobile_menu__li"> <a href = "/statistics.html">Статистика</a></li>
-                <li class="mobile_menu__li"> <a href = "/">Документы</a></li>
+                <li class="mobile_menu__li"> <a href = "/documents.html">Документы</a></li>
             </ul>
         </nav>
     </div>
@@ -61,10 +61,10 @@
                     <nav class = "menu">
                         <ul class = "menu__ul">
                             <li class="menu__li"> <a href = "/">Главная</a> </li>
-                            <li class="menu__li"> <a href = "/">Игры</a></li>
+                            <li class="menu__li"> <a href = "/all_games.html">Игры</a></li>
                             <li class="menu__li"> <a href = "/team.html">Команда</a> </li>
                             <li class="menu__li"> <a href = "/statistics.html">Статистика</a></li>
-                            <li class="menu__li"> <a href = "/">Документы</a></li>
+                            <li class="menu__li"> <a href = "/documents.html">Документы</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -84,7 +84,7 @@
                         Конкурс пройдёт в три этапа с 5 по 29 декабря. Имя первой в истории обладательницы титула «Мисс Волейбольная лига «Трудовые резервы» мы объявим 30 декабря 2021 года.
                     </div>
                     <div class="news__block-link">
-                        <a href="/">Читать далее</a>
+                        <a href="/one_page.html">Читать далее</a>
                     </div>
                </div>
            </div>
@@ -101,7 +101,7 @@
                      Конкурс пройдёт в три этапа с 5 по 29 декабря. Имя первой в истории обладательницы титула «Мисс Волейбольная лига «Трудовые резервы» мы объявим 30 декабря 2021 года.
                  </div>
                  <div class="news__block-link">
-                     <a href="/">Читать далее</a>
+                    <a href="/one_page.html">Читать далее</a>
                  </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                      Конкурс пройдёт в три этапа с 5 по 29 декабря. Имя первой в истории обладательницы титула «Мисс Волейбольная лига «Трудовые резервы» мы объявим 30 декабря 2021 года.
                  </div>
                  <div class="news__block-link">
-                     <a href="/">Читать далее</a>
+                    <a href="/one_page.html">Читать далее</a>
                  </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                      Конкурс пройдёт в три этапа с 5 по 29 декабря. Имя первой в истории обладательницы титула «Мисс Волейбольная лига «Трудовые резервы» мы объявим 30 декабря 2021 года.
                  </div>
                  <div class="news__block-link">
-                     <a href="/">Читать далее</a>
+                    <a href="/one_page.html">Читать далее</a>
                  </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
                      Конкурс пройдёт в три этапа с 5 по 29 декабря. Имя первой в истории обладательницы титула «Мисс Волейбольная лига «Трудовые резервы» мы объявим 30 декабря 2021 года.
                  </div>
                  <div class="news__block-link">
-                     <a href="/">Читать далее</a>
+                    <a href="/one_page.html">Читать далее</a>
                  </div>
             </div>
         </div>
@@ -169,7 +169,7 @@
                      Конкурс пройдёт в три этапа с 5 по 29 декабря. Имя первой в истории обладательницы титула «Мисс Волейбольная лига «Трудовые резервы» мы объявим 30 декабря 2021 года.
                  </div>
                  <div class="news__block-link">
-                     <a href="/">Читать далее</a>
+                     <a href="/one_page.html">Читать далее</a>
                  </div>
             </div>
         </div>
