--- a/team.html
+++ b/team.html
@@ -26,6 +26,7 @@
                 <li class="mobile_menu__li"> <a href = "/team.html">Команда</a> </li>
                 <li class="mobile_menu__li"> <a href = "/statistics.html">Статистика</a></li>
                 <li class="mobile_menu__li"> <a href = "/documents.html">Документы</a></li>
+                <li class="mobile_menu__li"> <a href = "/contacts.html">Контакты</a></li>
             </ul>
         </nav>
     </div>
@@ -64,6 +65,7 @@
                             <li class="menu__li"> <a href = "/team.html">Команда</a> </li>
                             <li class="menu__li"> <a href = "/statistics.html">Статистика</a></li>
                             <li class="menu__li"> <a href = "/">Документы</a></li>
+                            <li class="menu__li"> <a href = "/contacts.html">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
