--- a/voleyboll/statistics.html
+++ b/voleyboll/statistics.html
@@ -20,7 +20,7 @@
         <nav class = "mobile_menu">
             <ul class = "mobile_menu__ul">
                 <li class="mobile_menu__li"> <a href = "/">Главная</a> </li>
-                <li class="mobile_menu__li"> <a href = "/all_games.html">Игры</a></li>
+                <li class="mobile_menu__li"> <a href = "/all_games.html">Расписание/a></li>
                 <li class="mobile_menu__li"> <a href = "/team.html">Команда</a> </li>
                 <li class="mobile_menu__li"> <a href = "/statistics.html">Статистика</a></li>
                 <li class="mobile_menu__li"> <a href = "/documents.html">Документы</a></li>
@@ -59,10 +59,10 @@
                     <nav class = "menu">
                         <ul class = "menu__ul">
                             <li class="menu__li"> <a href = "/">Главная</a> </li>
-                            <li class="menu__li"> <a href = "/">Игры</a></li>
+                            <li class="menu__li"> <a href = "/all_games.html">Расписание</a></li>
                             <li class="menu__li"> <a href = "/team.html">Команда</a> </li>
                             <li class="menu__li"> <a href = "/statistics.html">Статистика</a></li>
-                            <li class="menu__li"> <a href = "/">Документы</a></li>
+                            <li class="menu__li"> <a href = "/documents.html">Документы</a></li>
                             <li class="menu__li"> <a href = "/contacts.html">Контакты</a></li>
                         </ul>
                     </nav>
